--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-scikit-learn version==1.2.2
-sentence-transformers version==2.2.2
-pandas version==1.5.3
-numpy version==1.23.5
-umap-learn version==0.5.5
-matplotlib version==3.7.1
+sklearn
+pandas==1.5.3
+numpy==1.23.5
+umap-learn==0.5.5
+matplotlib==3.7.1
